Tools/BuildToolGUI/Resources/style.css
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');

:root {
    --background-light: #62717B;
    --background-main: #37474f;
    --background-titlebar: #102027;
    --interact-idle: #00ADB5;
    --interact-hover: #00949c;
    --text-title: #ffffff;
    --text-interact: #ffffff;
    --text-console: #ffffff;
  }

html 
{
    background-color: transparent;
}

body 
{
    width: 100%;
    height: 100%;
    margin: 0;
}

*
{
    font: 1em Source Sans Pro;
}

.page
{
    padding: 0;
    margin: 0;

    height:100%;
    -webkit-box-sizing: border-box;
    
    border-radius: 16px;
    
    background: var(--background-main);
    
    overflow: hidden;
}

.titlebar
{
    position: relative;

    background: var(--background-titlebar);
    height: 2em;
}

.titlebar button
{
    background: var(--interact-idle);
    float: right;
    width: 2.5em;
    height: 100%;
    padding: 0px;
    border: 0px;

    border-radius: 0;
}

#minimizeButton
{
    border-top-left-radius: 16px;
}

.titlebar button:hover
{
    background: var(--interact-hover);
}

.titlebar p
{
    color: var(--text-title);
    margin: 0px;

    font-size: 1.2em;

    position: absolute;
    top: 50%;
    left: .5em;
    transform: translate(0, -50%);
}

.headerContainer
{
    overflow: auto;
}

.header
{
    margin: 8px;
}

.header input
{
    width: 100%;
}

.header select
{
    width: 45%;
}

.header button
{
    width: 25%;
}


#commandOutput
{
    color: var(--text-console);
    background-color: var(--background-light);

    overflow-y: scroll;
    vertical-scrollbar: VerticalScrollbar;

    word-wrap: break-word;

    padding-right: 8px;
}

#consoleText
{
    margin: 8px;
}

@set VerticalScrollbar
{
    .base
    {
        display: none;
        width: 8px;
    }
    
    .slider
    {
        background: var(--interact-idle);
        border-radius: 4px;
    }

    .slider:hover
    {
        background: var(--interact-hover);
    }
}

button
{
    color: var(--text-interact);
    height: 26px;
    border-radius: 5px;
    border: 0px;
    background: var(--interact-idle);
}

button:hover
{
    background: var(--interact-hover);
}

